[package]
name = "space-shooter"
version = "0.1.0-wip"
authors = ["LFalch <lucas@wasd.dk>"]

[dependencies]
simple-vector2d = {version = "0.1", features = ["rustc-serialize"]}
rustc-serialize = "0.3"

[dependencies.korome]
version = "0.13"

[dependencies.bincode]
version = "0.6"
default-features = false
features = ["rustc-serialize"]
