[workspace]
members = [".", "velox", "velox-server"]

[package]
name = "velox-core"
version = "0.1.0-wip"
authors = ["LFalch <lucas@wasd.dk>"]

[dependencies]
simple-vector2d = {version = "0.1", features = ["rustc-serialize"]}
rustc-serialize = "0.3"
rand = "0.3"

[dependencies.bincode]
version = "0.6"
default-features = false
features = ["rustc-serialize"]
